<resources>
    <string name="app_name">Ksports</string>
    <string name="empty_text">这里什么都没有</string>
    <string name="toobar_tittle">详情页面</string>
    <string name="mine_save">我的收藏</string>
    <string name="mine_history">历史记录</string>
    <string name="mine_clear">清除缓存</string>
    <string name="mine_faq">意见反馈</string>
    <string name="tab_live">看球</string>
    <string name="tab_news">新闻</string>
    <string name="tab_mine">我的</string>
    <string name="toobar_news">新闻</string>
    <string name="dialog_ensure">确定</string>
    <string name="dialog_question">确定退出？</string>
    <string name="dialog_cancells">取消</string>
    <string name="detail_share">分享</string>
    <string name="entry">立即体验</string>
    <string name="text_bar_samll">小</string>
    <string name="text_bar_big">大</string>
    <string name="img_mode">无图模式</string>
    <string name="news_notifycation">消息通知</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
