<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="270dp"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/dialog_question"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:background="@drawable/custom_dialog_top_tittle"
        android:layout_height="50dp" />
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/custom_dialog_bottom_tittle"
        >
        <Button
            android:id="@+id/posi"
            android:text="@string/dialog_ensure"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:layout_width="0dp"
            android:background="@drawable/dialog_selector"
            android:layout_weight="1"
            android:layout_height="40dp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            />
        <Button
            android:id="@+id/navi"
            android:text="@string/dialog_cancells"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:layout_width="0dp"
            android:background="@drawable/dialog_selector"
            android:layout_weight="1"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>