<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    >
    <RelativeLayout
        android:id="@+id/relativelayout_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_mine_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collect"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_save"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_mine_save"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_mine_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/histoer"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_history"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_mine_history"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_clear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_mine_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/clearcatche"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_clear"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_mine_clear"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_faq"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_mine_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/faq"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_faq"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_mine_faq"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
</LinearLayout>